# voice100

./: .flake8  .gitignore  LICENSE  README.md  accent.ipynb  accent.py  accent1.py  check_aligntext.py  pyproject.toml  setup.py  test-espeak.py
.github/workflows/: python-package.yml
config/: align_en_base.yaml  align_en_phone_base.yaml  align_ja_phone_base.yaml  asr_en_base.yaml  asr_en_phone_base.yaml  asr_en_phone_small.yaml  asr_en_small.yaml  asr_ja_phone_base.yaml  asr_ja_phone_small.yaml  asr_lstm_base_ja_phone.yaml  asr_lstm_small_ja_phone.yaml  tts_en_base.yaml  tts_en_mt_base.yaml  tts_en_phone_base.yaml  tts_ja_phone_base.yaml  ttsaudio_ja_phone_base.yaml  ttsaudio_ja_phone_lstm_base.yaml
tests/: datasets_test.py  import_test.py  test_datasets.py  test_import.py  test_onnx.py  test_text.py  text_test.py
voice100/: __init__.py  _css10ja2voca.py  _text2voca.py  _yomi2voca.py  align_data.py  align_text.py  audio.py  augment.py  cache_dataset.py  calc_stat.py  convert_phone.py  convert_world.py  data_modules.py  data_pipeline_test.py  dataset.py  datasets.py  datasets_test.py  encoder.py  espeak-phonemize.py  export_onnx.py  export_onnx_v1.py  jasper.py  main.py  merge_data.py  models.py  onnx_test.py  package_info.py  prepare_dataset.py  prepare_vc.py  preprocess.py  preprocess_test.py  text.py  text_test.py  tokenizers.py  tokenizers_test.py  train.py  train_align.py  train_aligntts.py  train_asr.py  train_ctc.py  (+16 more)
voice100/japanese/: __init__.py  kata2ipa.py  phonemizer.py
voice100/models/: __init__.py  _align_v2.py  _asr_v2.py  _base.py  _layers.py  _layers_v1.py  _layers_v2.py  _tts_mt_v2.py  _tts_v2.py  _ttsalign_v2.py  _ttsaudio_v2.py  align.py  asr.py  asr_lstm.py  base.py  layers.py  transformer.py  tts.py  vc.py
voice100_tts/: data.py  data_pipeline.py  data_pipeline_test.py  dataset.py  encoder.py  jasper.py  merge_data.py  models.py  normalization.py  preprocess.py  preprocess_test.py  train.py  train_ctc.py  train_vae.py  train_vc.py  vocoder.py  wsola.py  yamnet.py
