[tool.poetry]
name = "voice100"
version = "1.4.0"
description = "Voice100 is a small TTS for English and Japanese."
authors = ["Katsuya Iida <katsuya.iida@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^1.12"
torchaudio = "^0"
pytorch_lightning = "^1.4"
pyworld = "^0.3.2"
g2p-en = "^2.1.0"
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"

[tool.poetry.extras]
tts = ["pyworld"]
lang-en-phone = ["g2p-en"]
lang-ja = ["fugashi", "unidic-lite"]

[tool.poetry.group.test]  # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
flake8 = "^6.0.0"
soundfile = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
