[tool.poetry]
name = "voice100"
version = "1.6.0"
description = "Voice100 is a small TTS for English and Japanese."
authors = ["Katsuya Iida <katsuya.iida@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
voice100 = "voice100.main:cli_main"
voice100-align-text = "voice100.align_text:cli_main"
voice100-calc-stat = "voice100.calc_stat:cli_main"
voice100-cache-dataset = "voice100.cache_dataset:cli_main"
voice100-prepare-dataset = "voice100.prepare_dataset:cli_main"
voice100-export-onnx-v1 = "voice100.export_onnx_v1:cli_main"
voice100-export-onnx = "voice100.export_onnx:cli_main"
voice100-train-align = "voice100.train_align:cli_main"
voice100-train-asr = "voice100.train_asr:cli_main"
voice100-train-ttsalign = "voice100.train_ttsalign:cli_main"
voice100-train-ttsaudio = "voice100.train_ttsaudio:cli_main"
voice100-train-ttsaudio-v2 = "voice100.train_ttsaudio_v2:cli_main"
voice100-train-ttsaudio-mt = "voice100.train_ttsaudio_mt:cli_main"

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^1.12"
torchaudio = "^0"
pytorch_lightning = { version = "^1.5", extras = ["extra"] }
pyworld = "^0.3.2"
g2p-en = "^2.1.0"
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"

[tool.poetry.extras]
tts = ["pyworld"]
lang-en-phone = ["g2p-en"]
lang-ja = ["fugashi", "unidic-lite"]

[tool.poetry.group.test]  # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
