[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "voice100"
authors = [{name = "Katsuya Iida", email = "katsuya.iida@gmail.com"}]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

dependencies = [
    "torch >=2.1",
    "torchaudio >=2.1",
    "pytorch_lightning[extra] >=2.1"
]

[project.optional-dependencies]
test = [
    "pytest >=6.0.0",
    "flake8 >=6.0.0"
]
tts = ["pyworld >=0.3.4"]
lang-en-phone = ["g2p-en >=2.1.0"]
lang-ja = ["fugashi >=1.3.0", "unidic-lite >=1.0.8"]

[project.urls]
Home = "https://github.com/kaiidams/voice100"

[project.scripts]
voice100 = "voice100.main:cli_main"
voice100-align-text = "voice100.align_text:cli_main"
voice100-calc-stat = "voice100.calc_stat:cli_main"
voice100-cache-dataset = "voice100.cache_dataset:cli_main"
voice100-prepare-dataset = "voice100.prepare_dataset:cli_main"
voice100-export-onnx-v1 = "voice100.export_onnx_v1:cli_main"
voice100-export-onnx = "voice100.export_onnx:cli_main"
voice100-train-align = "voice100.train_align:cli_main"
voice100-train-asr = "voice100.train_asr:cli_main"
voice100-train-ttsalign = "voice100.train_ttsalign:cli_main"
voice100-train-ttsaudio = "voice100.train_ttsaudio:cli_main"
voice100-train-ttsaudio-v2 = "voice100.train_ttsaudio_v2:cli_main"
voice100-train-ttsaudio-mt = "voice100.train_ttsaudio_mt:cli_main"
